# deep_drone_acrobatics

./: .clang-format  .gitignore  LICENSE  README.md  conda_requirements.txt  dependencies.yaml  pip_requirements.txt
acrobatic_trajectory_helper/: CMakeLists.txt  package.xml
acrobatic_trajectory_helper/include/acrobatic_trajectory_helper/: acrobatic_sequence.h  circle_trajectory_helper.h  heading_trajectory_helper.h  polynomial_trajectory_helper.h
acrobatic_trajectory_helper/src/: acrobatic_sequence.cpp  circle_trajectory_helper.cpp  heading_trajectory_helper.cpp  polynomial_trajectory_helper.cpp
controller_learning/: CMakeLists.txt  README.md  common.py  iterative_learning_trajectories.py  package.xml  setup.py  test_trajectories.py  train.py
controller_learning/ckpt/loop/fts_and_imu/: ckpt-7.data-00000-of-00002  ckpt-7.data-00001-of-00002  ckpt-7.index
controller_learning/ckpt/loop/imu_only/: ckpt-37.data-00000-of-00002  ckpt-37.data-00001-of-00002  ckpt-37.index
controller_learning/config/: dagger_settings.yaml  settings.py  test_settings.yaml  train_settings.yaml
controller_learning/launch/simulation/: controller.launch  custom_rotors_interface.launch  minisim.launch  quadrotor_rgb_world_no_controller.launch  rpg_mpc.launch  rpg_pid.launch  rpg_rotors_interface.launch  rviz_only.launch  simulation.launch
controller_learning/src/ControllerLearning/: TrajectoryBase.py  TrajectoryLearning.py
controller_learning/src/ControllerLearning/models/: body_dataset.py  bodyrate_learner.py  nets.py  tf_addons_normalizations.py
controller_learning/train_logs/20191015-164750/train/: checkpoint  ckpt-78.data-00000-of-00002  ckpt-78.data-00001-of-00002  ckpt-78.index  ckpt-79.data-00000-of-00002  ckpt-79.data-00001-of-00002  ckpt-79.index  ckpt-80.data-00000-of-00002  ckpt-80.data-00001-of-00002  ckpt-80.index  events.out.tfevents.1571150870.elia-ThinkPad-P51.9892.82.v2
controller_learning/train_logs/20191022-082718/train/: checkpoint  ckpt-1078.data-00000-of-00002  ckpt-1078.data-00001-of-00002  ckpt-1078.index  ckpt-1079.data-00000-of-00002  ckpt-1079.data-00001-of-00002  ckpt-1079.index  ckpt-1080.data-00000-of-00002  ckpt-1080.data-00001-of-00002  ckpt-1080.index  events.out.tfevents.1571725638.elia-ThinkPad-P51.29578.82.v2
controller_learning/train_logs/20191022-095948/train/: checkpoint  ckpt-1000.data-00000-of-00002  ckpt-1000.data-00001-of-00002  ckpt-1000.index  ckpt-998.data-00000-of-00002  ckpt-998.data-00001-of-00002  ckpt-998.index  ckpt-999.data-00000-of-00002  ckpt-999.data-00001-of-00002  ckpt-999.index  events.out.tfevents.1571731188.elia-ThinkPad-P51.5931.82.v2
controller_learning/train_logs/20191022-122145/train/: events.out.tfevents.1571739705.elia-ThinkPad-P51.15206.54.v2
controller_learning/train_logs/20191022-122316/train/: events.out.tfevents.1571739796.elia-ThinkPad-P51.16327.54.v2
controller_learning/train_logs/20191022-122551/train/: events.out.tfevents.1571739951.elia-ThinkPad-P51.16978.54.v2
controller_learning/train_logs/20191022-122626/train/: events.out.tfevents.1571739986.elia-ThinkPad-P51.17446.54.v2
controller_learning/train_logs/20191022-122842/train/: events.out.tfevents.1571740122.elia-ThinkPad-P51.17988.54.v2
controller_learning/train_logs/20191022-123011/train/: events.out.tfevents.1571740211.elia-ThinkPad-P51.18467.54.v2
controller_learning/train_logs/20191022-134158/train/: events.out.tfevents.1571744518.elia-ThinkPad-P51.27889.54.v2
controller_learning/train_logs/20191022-135227/train/: events.out.tfevents.1571745147.elia-ThinkPad-P51.31014.54.v2
controller_learning/train_logs/20191022-135514/train/: events.out.tfevents.1571745314.elia-ThinkPad-P51.32244.54.v2
controller_learning/train_logs/20191023-115641/train/: events.out.tfevents.1571824601.elia-ThinkPad-P51.12466.54.v2
controller_learning/train_logs/20191023-115844/train/: events.out.tfevents.1571824724.elia-ThinkPad-P51.13447.54.v2
controller_learning/train_logs/20191023-120327/train/: events.out.tfevents.1571825007.elia-ThinkPad-P51.15260.54.v2
controller_learning/train_logs/20191023-120523/train/: events.out.tfevents.1571825123.elia-ThinkPad-P51.16206.54.v2
controller_learning/train_logs/20191023-120641/train/: events.out.tfevents.1571825201.elia-ThinkPad-P51.17007.54.v2
controller_learning/train_logs/20191023-121605/train/: events.out.tfevents.1571825765.elia-ThinkPad-P51.19388.54.v2
controller_learning/train_logs/20191023-122039/train/: events.out.tfevents.1571826039.elia-ThinkPad-P51.21241.54.v2
custom_rotors_interface/: CMakeLists.txt  package.xml
custom_rotors_interface/include/custom_rotors_interface/: custom_rotors_interface.h
custom_rotors_interface/parameters/: autopilot.yaml
custom_rotors_interface/src/: custom_rotors_interface.cpp  custom_rotors_interface_node.cpp
fpv_aggressive_trajectories/: CMakeLists.txt  package.xml
fpv_aggressive_trajectories/include/fpv_aggressive_trajectories/: fpv_aggressive_trajectories.h  odometry_republisher.h  visualize.h
fpv_aggressive_trajectories/launch/simulation/: controller.launch  rpg_mpc.launch  rpg_pid.launch  simulation.launch
fpv_aggressive_trajectories/resources/rviz/: race_track.rviz  real_world.rviz
fpv_aggressive_trajectories/resources/urdf/: component_snippets.xacro  hummingbird_base.xacro  mav_generic_odometry_sensor_rgb.gazebo
fpv_aggressive_trajectories/resources/worlds/: controller_learning.world  random_gates.world  single_gate.world  track.world
fpv_aggressive_trajectories/rviz/: trajectory_comparison_looping_sim.rviz
fpv_aggressive_trajectories/src/: fpv_aggressive_trajectories.cpp  odometry_republisher.cpp  visualize.cpp
odometry_converter/: CMakeLists.txt  package.xml
odometry_converter/include/odometry_converter/: odometry_converter.h
odometry_converter/src/: odometry_converter.cpp  odometry_converter_node.cpp
test_performance/: CMakeLists.txt  README.md  package.xml  setup.py
test_performance/launch/: test_performance.launch
test_performance/nodes/: test_performance.py
test_performance/src/TestPerformance/: TestPerformance.py
(+13 files in other folders)
