<?xml version="1.0"?>
<package format="2">
    <name>custom_rotors_interface</name>
    <version>0.0.0</version>
    <description>A package containing utils for simulation</description>

    <maintainer email="ekaufmann@ifi.uzh.ch">Elia Kaufmann</maintainer>
    <license>GNU GPL</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>

    <depend>roscpp</depend>
    <depend>gazebo</depend>
    <depend>gazebo_msgs</depend>
    <depend>mav_msgs</depend>
    <depend>quadrotor_common</depend>
    <depend>pose_utils</depend>
    <depend>rotors_gazebo</depend>
    <depend>rotors_description</depend>
    <depend>manual_flight_assistant</depend>
    <depend>rqt_quad_gui</depend>

</package>
