<?xml version="1.0"?>
<package format="2">
  <name>fpv_aggressive_trajectories</name>
  <version>0.0.0</version>
  <description>The fpv_aggressive_trajectories package</description>

  <maintainer email="ekaufmann@ifi.uzh.ch">Elia Kaufmann</maintainer>
  <license>TODO</license>

  <author>Elia Kaufmann</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>acrobatic_trajectory_helper</depend>
  <depend>autopilot</depend>
  <depend>eigen_catkin</depend>
  <depend>minimum_jerk_trajectories</depend>
  <depend>nav_msgs</depend>
  <depend>quadrotor_common</depend>
  <depend>quadrotor_msgs</depend>
  <depend>roscpp</depend>
  <depend>rpg_common</depend>
  <depend>rpg_mpc</depend>
  <depend>std_msgs</depend>

</package>
