<?xml version="1.0"?>
<package format="2">
  <name>test_performance</name>
  <version>0.0.1</version>
  <description>Learning to navigate with a realsense</description>

  <maintainer email="loquercio@ifi.uzh.ch">tony</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>
    
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  
  <build_depend>message_generation</build_depend>
  

  <export>

  </export>
</package>
